bunch-of-code/k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: sampleapp
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
