bunch-of-code/k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sampleapp
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
